--- a/FileCopy/MainPage.xaml
+++ b/FileCopy/MainPage.xaml
@@ -10,6 +10,8 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <StackPanel>
+        <TextBlock  Margin="10" Foreground="Purple" FontSize="42" FontStyle="Oblique" FontWeight="ExtraBold" Text="Folder Transmit" VerticalAlignment="Center"/>
+
         <StackPanel Orientation="Horizontal">
             <Button Content="Choose Src Folder" Margin="10" VerticalAlignment="Top" Height="80" Width="180" Click="Button_Click"/>
             <TextBlock Text="Src Folder: " Margin="10" Foreground="Blue" FontStyle="Italic"  FontSize="20"  VerticalAlignment="Center"/>
@@ -20,22 +22,30 @@
             <TextBlock Text="Target Folder: " Margin="10" Foreground="Blue" FontStyle="Italic" FontSize="20" VerticalAlignment="Center" />
             <TextBlock x:Name="tbTargetFolder" Margin="10"  Foreground="Purple" FontSize="20"  Text=""  VerticalAlignment="Center"/>
         </StackPanel>
-        <Button Content="Copy Src Folder To Target" Margin="10" VerticalAlignment="Top" Height="80" Width="180" Click="Button_Click_2"/>
-        <ProgressBar x:Name="pb" Height="30" Width="319" HorizontalAlignment="Left" Maximum="100" Minimum="0" Value="0" Margin="10"/>
-        <ProgressBar x:Name="pb2" Height="30" Width="319" HorizontalAlignment="Left" Maximum="10" Minimum="0" Value="0" Margin="10"/>
         <StackPanel Orientation="Horizontal">
-            <TextBlock  Foreground="Blue" FontStyle="Italic" FontSize="20" Text="No. Files: "/>
-            <TextBlock Foreground="Purple" FontSize="20" x:Name="tbNumFiles" Text="0"/>
+            <Button Content="Copy Src Folder To Target" Margin="10" VerticalAlignment="Top" Height="80" Width="180" Click="Button_Click_2"/>
+            <Button Content="Cancel" Margin="10" VerticalAlignment="Top" Height="80" Width="180" Click="Button_Click_3"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
-            <TextBlock  Foreground="Blue" FontStyle="Italic" FontSize="20" Text="No. Folders: "/>
-            <TextBlock Foreground="Purple" FontSize="20" x:Name="tbNumFolders" Text="0"/>
+            <ProgressBar x:Name="pb" Height="30" Width="319" Background="Beige" HorizontalAlignment="Left" Maximum="100" Minimum="0" Value="0" Margin="10"/>
+            <TextBlock  VerticalAlignment="Center" Foreground="Red" FontStyle="Italic" FontSize="20" Text="File Progress (in 100s) "/>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
-            <TextBlock  Foreground="Blue" FontStyle="Italic" FontSize="20" Text="Status: "/>
-            <TextBlock Foreground="Green" FontSize="20" x:Name="tbStatus" Text=""/>
+            <ProgressBar x:Name="pb2" Height="30" Width="319" Background="Beige" HorizontalAlignment="Left" Maximum="10" Minimum="0" Value="0" Margin="10"/>
+            <TextBlock   VerticalAlignment="Center" Foreground="Red" FontStyle="Italic" FontSize="20" Text="Folder Progress (in 10s) "/>
         </StackPanel>
-        <Button Content="Cancel" Margin="10" VerticalAlignment="Top" Height="80" Width="180" Click="Button_Click_3"/>
+        <StackPanel Orientation="Horizontal">
+            <TextBlock  Margin="10" Foreground="Blue" FontStyle="Italic" FontSize="20" Text="No. Files: "/>
+            <TextBlock  Margin="10" Foreground="Purple" FontSize="20" x:Name="tbNumFiles" Text="0"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <TextBlock Margin="10" Foreground="Blue" FontStyle="Italic" FontSize="20" Text="No. Folders: "/>
+            <TextBlock Margin="10" Foreground="Purple" FontSize="20" x:Name="tbNumFolders" Text="0"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <TextBlock Margin="10"  Foreground="Blue" FontStyle="Italic" FontSize="20" Text="Status: "/>
+            <TextBlock Margin="10" Foreground="Green" FontSize="20" x:Name="tbStatus" Text=""/>
+        </StackPanel>
 
     </StackPanel>
 </Page>
